--- a/Helm/charts/membrain_seg/templates/deployment.yaml
+++ b/Helm/charts/membrain_seg/templates/deployment.yaml
@@ -79,10 +79,9 @@ spec:
     - type: rabbitmq
       metadata:
         host: {{ .Values.global.rmqHost }}
-        queueName: membrain_seg
+        queueName: segmentation
         mode: QueueLength
         value: "{{ .Values.queueLengthTrigger }}"
   minReplicaCount: {{ .Values.minReplicaCount }}
   maxReplicaCount: {{ .Values.maxReplicaCount }}
-  idleReplicaCount: {{ .Values.idleReplicaCount }}
 {{ end }}
