Require numpy<2 for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     ispyb
     marshmallow-sqlalchemy
     mrcfile
-    numpy
+    numpy < 2.0.0
     pillow
     plotly
     pydantic ==1.10.7
