Upgrade zocalo slurm submission to v0.32.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
     stomp-py ==8.1.0
     tifffile  # CLEM workflow
     workflows
-    zocalo ==0.30.2
+    zocalo
 packages = find:
 package_dir =
     =src
