--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ project_urls =
 [options]
 include_package_data = True
 install_requires =
+    defusedxml  # CLEM workflow
     gemmi ==0.6.5
     healpy
     icebreaker-em
@@ -36,8 +37,10 @@ install_requires =
     pillow
     plotly
     pydantic ==1.10.7
+    readlif  # CLEM workflow
     starfile
     stomp-py ==8.1.0
+    tifffile  # CLEM workflow
     workflows
     zocalo ==0.30.2
 packages = find:
