Renamed LIF to image stack conversion function (TIFF not as appropriate); added command line entry points for the CLEM image stack creation functions

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,8 @@ zip_safe = False
 ccpem_pipeliner.jobs =
     combine_star_files_job = cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles
 console_scripts =
+    clem.lif_to_stack = cryoemservices.cli.lif_to_stack:run
+    clem.tiff_to_stack = cryoemservices.cli.tiff_to_stack:run
     combine_star_files = cryoemservices.pipeliner_plugins.combine_star_files:main
     cryoemservices.reextract = cryoemservices.pipeliner_plugins.reextract:run
     cryoemservices.resubmit_wrapper = cryoemservices.cli.resubmit_wrapper:run
