Integrating CLEM workflow into `cryoem-services` (#30)
* Ported CLEM processing-related files to the repository from `murfey`

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ project_urls =
 [options]
 include_package_data = True
 install_requires =
+    defusedxml  # CLEM workflow
     gemmi ==0.6.5
     healpy
     icebreaker-em
@@ -36,8 +37,10 @@ install_requires =
     pillow
     plotly
     pydantic ==1.10.7
+    readlif  # CLEM workflow
     starfile
     stomp-py ==8.1.0
+    tifffile  # CLEM workflow
     workflows
     zocalo ==0.30.2
 packages = find:
@@ -50,6 +53,8 @@ zip_safe = False
 ccpem_pipeliner.jobs =
     combine_star_files_job = cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles
 console_scripts =
+    clem.lif_to_stack = cryoemservices.cli.lif_to_stack:run
+    clem.tiff_to_stack = cryoemservices.cli.tiff_to_stack:run
     combine_star_files = cryoemservices.pipeliner_plugins.combine_star_files:main
     cryoemservices.reextract = cryoemservices.pipeliner_plugins.reextract:run
     cryoemservices.resubmit_wrapper = cryoemservices.cli.resubmit_wrapper:run
