--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ install_requires =
     stomp-py ==8.1.0
     tifffile  # CLEM workflow
     workflows
-    zocalo
+    zocalo ==0.32.0
 packages = find:
 package_dir =
     =src
