--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,9 +3,13 @@ current_version = 0.3.0
 commit = True
 tag = True
 
-[bumpversion:file:setup.cfg]
-search = version = {current_version}
-replace = version = {new_version}
+# [bumpversion:file:setup.cfg]
+# search = version = {current_version}
+# replace = version = {new_version}
+
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:src/cryoemservices/__init__.py]
 search = __version__ = "{current_version}"
