--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -10,3 +10,7 @@ replace = version = "{new_version}"
 [bumpversion:file:src/cryoemservices/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
+[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
