Replaced absolute paths with relative paths

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -11,82 +11,82 @@ replace = version = "{new_version}"
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/Chart.yaml]
+[bumpversion:file:Helm/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/bfactor_setup/Chart.yaml]
+[bumpversion:file:Helm/charts/bfactor_setup/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/cluster_submission/Chart.yaml]
+[bumpversion:file:Helm/charts/cluster_submission/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/cryolo/Chart.yaml]
+[bumpversion:file:Helm/charts/cryolo/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/ctffind/Chart.yaml]
+[bumpversion:file:Helm/charts/ctffind/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/denoise_slurm/Chart.yaml]
+[bumpversion:file:Helm/charts/denoise_slurm/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/dispatcher/Chart.yaml]
+[bumpversion:file:Helm/charts/dispatcher/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/extract/Chart.yaml]
+[bumpversion:file:Helm/charts/extract/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/extract_class/Chart.yaml]
+[bumpversion:file:Helm/charts/extract_class/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/icebreaker/Chart.yaml]
+[bumpversion:file:Helm/charts/icebreaker/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/images/Chart.yaml]
+[bumpversion:file:Helm/charts/images/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/ispyb/Chart.yaml]
+[bumpversion:file:Helm/charts/ispyb/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/membrain_seg/Chart.yaml]
+[bumpversion:file:Helm/charts/membrain_seg/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/motioncorr/Chart.yaml]
+[bumpversion:file:Helm/charts/motioncorr/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/node_creator/Chart.yaml]
+[bumpversion:file:Helm/charts/node_creator/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/postprocess/Chart.yaml]
+[bumpversion:file:Helm/charts/postprocess/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/select_classes/Chart.yaml]
+[bumpversion:file:Helm/charts/select_classes/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/select_particles/Chart.yaml]
+[bumpversion:file:Helm/charts/select_particles/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/tomo_align/Chart.yaml]
+[bumpversion:file:Helm/charts/tomo_align/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
 
-[bumpversion:file:/home/wjr38212/Workspace/repos/cryoem-services/Helm/charts/tomo_align_slurm/Chart.yaml]
+[bumpversion:file:Helm/charts/tomo_align_slurm/Chart.yaml]
 search = version: {current_version}
 replace = version: {new_version}
