--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = [
-    "setuptools >= 40.6.0",
+    "setuptools>=40.6",
     "wheel",
 ]
 
@@ -15,7 +15,7 @@ keywords = [
 ]
 license = { file = "LICENSE" }
 authors = [
-    {name = "Diamond Light Source - Data Analysis et al.", email = "dataanalysis@diamond.ac.uk"},
+    { name = "Diamond Light Source - Data Analysis et al.", email = "dataanalysis@diamond.ac.uk" },
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -26,13 +26,15 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "defusedxml", # CLEM workflow
+    "defusedxml",             # CLEM workflow
     "gemmi==0.6.5",
     "healpy",
     "icebreaker-em",
-    "importlib_metadata",
+    "importlib-metadata",
     "ispyb",
     "marshmallow-sqlalchemy",
     "mrcfile",
@@ -40,80 +42,107 @@ dependencies = [
     "pillow",
     "plotly",
     "pydantic==1.10.7",
-    "readlif", # CLEM workflow
+    "readlif",                # CLEM workflow
     "starfile",
-    "stomp-py==8.1.0",
-    "tifffile", # CLEM workflow
+    "stomp-py==8.1",
+    "tifffile",               # CLEM workflow
     "workflows",
-    "zocalo==0.32.0",
+    "zocalo==0.32",
 ]
-[project.optional-dependencies]
-dev = [
+optional-dependencies.dev = [
     "bump2version",
     "ipykernel",
     "pre-commit",
     "pytest",
 ]
-[project.urls]
-    Bug-Tracker = "https://github.com/DiamondLightSource/cryoem-services/issues"
-    GitHub = "https://github.com/DiamondLightSource/cryoem-services"
-[project.scripts]
-    "clem.lif_to_stack" = "cryoemservices.cli.lif_to_stack:run"
-    "clem.tiff_to_stack" = "cryoemservices.cli.tiff_to_stack:run"
-    "combine_star_files" = "cryoemservices.pipeliner_plugins.combine_star_files:main"
-    "cryoemservices.reextract" = "cryoemservices.pipeliner_plugins.reextract:run"
-    "cryoemservices.resubmit_wrapper" = "cryoemservices.cli.resubmit_wrapper:run"
-[project.entry-points."ccpem_pipeliner.jobs"]
-    "combine_star_files_job" = "cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles"
-[project.entry-points."cryoemservices.services.cluster.schedulers"]
-    slurm = "cryoemservices.services.cluster_submission:submit_to_slurm"
-[project.entry-points."cryoemservices.services.images.plugins"]
-    "mrc_central_slice" = "cryoemservices.services.images_plugins:mrc_central_slice"
-    "mrc_to_apng" = "cryoemservices.services.images_plugins:mrc_to_apng"
-    "mrc_to_jpeg" = "cryoemservices.services.images_plugins:mrc_to_jpeg"
-    "picked_particles" = "cryoemservices.services.images_plugins:picked_particles"
-[project.entry-points."workflows.services"]
-    BFactor = "cryoemservices.services.bfactor_setup:BFactor"
-    CTFFind = "cryoemservices.services.ctffind:CTFFind"
-    ClusterSubmission = "cryoemservices.services.cluster_submission:ClusterSubmission"
-    CrYOLO = "cryoemservices.services.cryolo:CrYOLO"
-    DenoiseSlurm = "cryoemservices.services.denoise_slurm:DenoiseSlurm"
-    Extract = "cryoemservices.services.extract:Extract"
-    ExtractClass = "cryoemservices.services.extract_class:ExtractClass"
-    ISPyB = "cryoemservices.services.ispyb:EMISPyB"
-    IceBreaker = "cryoemservices.services.icebreaker:IceBreaker"
-    Images = "cryoemservices.services.images:Images"
-    MembrainSeg = "cryoemservices.services.membrain_seg:MembrainSeg"
-    MotionCorr = "cryoemservices.services.motioncorr:MotionCorr"
-    MotionCorrSlurm = "cryoemservices.services.motioncorr_slurm:MotionCorrSlurm"
-    NodeCreator = "cryoemservices.services.node_creator:NodeCreator"
-    PostProcess = "cryoemservices.services.postprocess:PostProcess"
-    SelectClasses = "cryoemservices.services.select_classes:SelectClasses"
-    SelectParticles = "cryoemservices.services.select_particles:SelectParticles"
-    TomoAlign = "cryoemservices.services.tomo_align:TomoAlign"
-    TomoAlignSlurm = "cryoemservices.services.tomo_align_slurm:TomoAlignSlurm"
-[project.entry-points."zocalo.services.dispatcher.filters"]
-    ispyb = "cryoemservices.util.dispatcher_tools:ispyb_filter"
-[project.entry-points."zocalo.services.dispatcher.ready_for_processing"]
-    ispyb = "cryoemservices.util.dispatcher_tools:ready_for_processing"
-[project.entry-points."zocalo.wrappers"]
-    Class2D = "cryoemservices.wrappers.class2d_wrapper:Class2DWrapper"
-    Class3D = "cryoemservices.wrappers.class3d_wrapper:Class3DWrapper"
-    Refine3D = "cryoemservices.wrappers.refine3d_wrapper:Refine3DWrapper"
+
+urls.Bug-Tracker = "https://github.com/DiamondLightSource/cryoem-services/issues"
+
+urls.GitHub = "https://github.com/DiamondLightSource/cryoem-services"
+
+scripts."clem.lif_to_stack" = "cryoemservices.cli.lif_to_stack:run"
+
+scripts."clem.tiff_to_stack" = "cryoemservices.cli.tiff_to_stack:run"
+
+scripts."combine_star_files" = "cryoemservices.pipeliner_plugins.combine_star_files:main"
+
+scripts."cryoemservices.reextract" = "cryoemservices.pipeliner_plugins.reextract:run"
+
+scripts."cryoemservices.resubmit_wrapper" = "cryoemservices.cli.resubmit_wrapper:run"
+
+entry-points."ccpem_pipeliner.jobs"."combine_star_files_job" = "cryoemservices.pipeliner_plugins.combine_star_job:ProcessStarFiles"
+
+entry-points."cryoemservices.services.cluster.schedulers".slurm = "cryoemservices.services.cluster_submission:submit_to_slurm"
+
+entry-points."cryoemservices.services.images.plugins"."mrc_central_slice" = "cryoemservices.services.images_plugins:mrc_central_slice"
+
+entry-points."cryoemservices.services.images.plugins"."mrc_to_apng" = "cryoemservices.services.images_plugins:mrc_to_apng"
+
+entry-points."cryoemservices.services.images.plugins"."mrc_to_jpeg" = "cryoemservices.services.images_plugins:mrc_to_jpeg"
+
+entry-points."cryoemservices.services.images.plugins"."picked_particles" = "cryoemservices.services.images_plugins:picked_particles"
+
+entry-points."workflows.services".BFactor = "cryoemservices.services.bfactor_setup:BFactor"
+
+entry-points."workflows.services".ClusterSubmission = "cryoemservices.services.cluster_submission:ClusterSubmission"
+
+entry-points."workflows.services".CrYOLO = "cryoemservices.services.cryolo:CrYOLO"
+
+entry-points."workflows.services".CTFFind = "cryoemservices.services.ctffind:CTFFind"
+
+entry-points."workflows.services".DenoiseSlurm = "cryoemservices.services.denoise_slurm:DenoiseSlurm"
+
+entry-points."workflows.services".Extract = "cryoemservices.services.extract:Extract"
+
+entry-points."workflows.services".ExtractClass = "cryoemservices.services.extract_class:ExtractClass"
+
+entry-points."workflows.services".IceBreaker = "cryoemservices.services.icebreaker:IceBreaker"
+
+entry-points."workflows.services".Images = "cryoemservices.services.images:Images"
+
+entry-points."workflows.services".ISPyB = "cryoemservices.services.ispyb:EMISPyB"
+
+entry-points."workflows.services".MembrainSeg = "cryoemservices.services.membrain_seg:MembrainSeg"
+
+entry-points."workflows.services".MotionCorr = "cryoemservices.services.motioncorr:MotionCorr"
+
+entry-points."workflows.services".MotionCorrSlurm = "cryoemservices.services.motioncorr_slurm:MotionCorrSlurm"
+
+entry-points."workflows.services".NodeCreator = "cryoemservices.services.node_creator:NodeCreator"
+
+entry-points."workflows.services".PostProcess = "cryoemservices.services.postprocess:PostProcess"
+
+entry-points."workflows.services".SelectClasses = "cryoemservices.services.select_classes:SelectClasses"
+
+entry-points."workflows.services".SelectParticles = "cryoemservices.services.select_particles:SelectParticles"
+
+entry-points."workflows.services".TomoAlign = "cryoemservices.services.tomo_align:TomoAlign"
+
+entry-points."workflows.services".TomoAlignSlurm = "cryoemservices.services.tomo_align_slurm:TomoAlignSlurm"
+
+entry-points."zocalo.services.dispatcher.filters".ispyb = "cryoemservices.util.dispatcher_tools:ispyb_filter"
+
+entry-points."zocalo.services.dispatcher.ready_for_processing".ispyb = "cryoemservices.util.dispatcher_tools:ready_for_processing"
+
+entry-points."zocalo.wrappers".Class2D = "cryoemservices.wrappers.class2d_wrapper:Class2DWrapper"
+
+entry-points."zocalo.wrappers".Class3D = "cryoemservices.wrappers.class3d_wrapper:Class3DWrapper"
+
+entry-points."zocalo.wrappers".Refine3D = "cryoemservices.wrappers.refine3d_wrapper:Refine3DWrapper"
 
 [tool.setuptools]
 package-dir = { "" = "src" }
 include-package-data = true
 zip-safe = false
 [tool.setuptools.packages.find]
-where = ["src"]
+where = [ "src" ]
 
 [tool.isort]
-profile="black"
+profile = "black"
 
 [tool.flake8]
 select = [
-    "C4",  # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
+    "C4",   # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
     "E401",
     "E711",
     "E712",
@@ -158,5 +187,5 @@ max-line-length = "88"
 inputs = "pyproject.toml"
 check = true
 indent = 4
-keep_full_version = true
+keep_full_version = false
 max-supported-python = "3.11"
