--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,10 +3,90 @@ current_version = 0.3.2
 commit = True
 tag = True
 
-[bumpversion:file:setup.cfg]
-search = version = {current_version}
-replace = version = {new_version}
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:src/cryoemservices/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
+[bumpversion:file:Helm/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/bfactor_setup/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/cluster_submission/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/cryolo/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/ctffind/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/denoise_slurm/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/dispatcher/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/extract/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/extract_class/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/icebreaker/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/images/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/ispyb/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/membrain_seg/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/motioncorr/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/node_creator/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/postprocess/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/select_classes/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/select_particles/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/tomo_align/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
+
+[bumpversion:file:Helm/charts/tomo_align_slurm/Chart.yaml]
+search = version: {current_version}
+replace = version: {new_version}
