Switch to bump-my-version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
 ]
 [project.optional-dependencies]
 dev = [
-    "bump2version",
+    "bump-my-version",
     "ipykernel",
     "pre-commit",
     "pytest",
