--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install pytest pytest-mock pytest-datafiles
+          pip install pytest pytest-cov pytest-mock pytest-datafiles
           pip install .
 
       - name: Test with pytest
