--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -1,7 +1,6 @@
 name: Run tests and publish Python distribution to PyPI
 
-on:
-  [push, pull_request]
+on: [push, pull_request]
 
 permissions:
   contents: read
@@ -13,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [ "3.9", "3.10", "3.11" ]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v4
@@ -25,6 +24,10 @@ jobs:
         run: |
           pip install pytest pytest-mock pytest-datafiles
           pip install .
+      - name: Install fork of CCP-EM pipeliner
+        run: |
+          git clone -b diamond_tomo --single-branch http://gitlab.com/stephen-riggs/ccpem-pipeliner.git
+          pip install ./ccpem-pipeliner
       - name: Test with pytest
         run: |
           pytest tests
@@ -58,7 +61,7 @@ jobs:
   publish-to-pypi:
     name: >-
       Publish Python distribution to PyPI
-    if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
+    if: startsWith(github.ref, 'refs/tags/') # only publish to PyPI on tag pushes
     needs:
       - build
     runs-on: ubuntu-latest
@@ -66,7 +69,7 @@ jobs:
       name: pypi
       url: https://pypi.org/p/cryoemservices
     permissions:
-      id-token: write  # IMPORTANT: mandatory for trusted publishing
+      id-token: write # IMPORTANT: mandatory for trusted publishing
 
     steps:
       - name: Download all the dists
@@ -86,8 +89,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write  # IMPORTANT: mandatory for making GitHub Releases
-      id-token: write  # IMPORTANT: mandatory for sigstore
+      contents: write # IMPORTANT: mandatory for making GitHub Releases
+      id-token: write # IMPORTANT: mandatory for sigstore
 
     steps:
       - name: Download all the dists
