Updated names of the CLEM preprocessing CLI scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,8 @@ dev = [
     Bug-Tracker = "https://github.com/DiamondLightSource/cryoem-services/issues"
     GitHub = "https://github.com/DiamondLightSource/cryoem-services"
 [project.scripts]
-    "clem.lif_to_stack" = "cryoemservices.cli.lif_to_stack:run"
-    "clem.tiff_to_stack" = "cryoemservices.cli.tiff_to_stack:run"
+    "clem.lif_to_stack" = "cryoemservices.cli.clem_lif_to_stack:run"
+    "clem.tiff_to_stack" = "cryoemservices.cli.clem_tiff_to_stack:run"
     "combine_star_files" = "cryoemservices.pipeliner_plugins.combine_star_files:main"
     "cryoemservices.reextract" = "cryoemservices.pipeliner_plugins.reextract:run"
     "cryoemservices.resubmit_wrapper" = "cryoemservices.cli.resubmit_wrapper:run"
