--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
     GitHub = "https://github.com/DiamondLightSource/cryoem-services"
 [project.scripts]
     "clem.lif_to_stack" = "cryoemservices.cli.clem_lif_to_stack:run"
+    "clem.process_stacks" = "cryoemservices.cli.clem_process_stacks:run"
     "clem.tiff_to_stack" = "cryoemservices.cli.clem_tiff_to_stack:run"
     "combine_star_files" = "cryoemservices.pipeliner_plugins.combine_star_files:main"
     "cryoemservices.reextract" = "cryoemservices.pipeliner_plugins.reextract:run"
