Added missing pytest plugins needed to run tests for cryoem-services on own machine

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,8 @@ dev = [
     "ipykernel",
     "pre-commit",
     "pytest",
+    "pytest-datafiles",
+    "pytest-mock",
 ]
 [project.urls]
     Bug-Tracker = "https://github.com/DiamondLightSource/cryoem-services/issues"
